public/css/style.css
/* ... */
.editor.highlighted1 .editarea
{
	background-color: #ffff94;
}
.editor.highlighted2 .editarea
{
	-moz-transition:background-color 1.5s;
	-webkit-transition:background-color 1.5s !important;
	-o-transition:background-color 1.5s;
	transition:background-color 1.5s !important;
	background-color: transparent;
}
/*.editor.modified .editarea
{
	-moz-transition:background-color 2s;
	-webkit-transition:background-color 2s !important;
	-o-transition:background-color 2s;
	transition:background-color 2s !important;
	background-color: #fff !important;
}*/
.editarea:hover 
{
	border:1px solid #666;
	cursor:text;
	color:#000;

}

body.rtl-target .editor .editarea span
{
	display: inline-block;
}

.search-editarea{overflow: auto;min-height:22px !important;cursor:text}

textarea, input, .editarea, .search-editarea, select  {
	outline: none !important
}
.source
{
    position:relative;
    z-index:999; 
    /*word-break: break-all;*/
}
.suggestion_source,
.translation
{
    word-wrap: break-word;
    word-break: break-word;
}
.graysmall .translation
{
    display: block;
	padding-bottom: 4px;
    /*padding: 4px;
    margin-left: -4px;*/
}
.graysmall .translation.editing
{
	padding: 3px;
	background: #fff;
	border: 1px solid #aaa;
	border-radius: 2px;
	box-shadow: inset 0 1px 2px #ddd;
	outline: none;
}    
.graysmall .switch-editing
{
    display: none;
    float: left;
    position: relative;
    text-indent: -9999px;
    margin-left: -26px;
    margin-right: 10px;
    width: 16px;
    height: 16px;   
    background: transparent url(../img/icon_edit.png) 0 0 no-repeat;
    cursor: pointer;
    opacity: 0.6;
}
.graysmall:hover .switch-editing
{
	display: block;
}
.graysmall:hover .switch-editing:hover
{
	opacity: 1;
}
.graysmall .edit-buttons
{
    float: right;
}
.graysmall .edit-buttons button
{
    color: #fff;
    background: #09beec;
    border: 1px solid #848689;
    font-weight: bold;
    text-decoration: none;
    padding: 4px 9px;
    margin: 4px 3px;
    border-radius: 2px;
    font-size: 10px;
    background: -webkit-gradient(linear, left top, left bottom, from(#09beec), to(#119ec4));
    background: -moz-linear-gradient(top,  #09beec,  #119ec4);
    background: linear-gradient(top,  #09beec,  #119ec4);
    cursor: pointer;
}
.graysmall .edit-buttons button.cancel
{
	color: #333;
	background: #f6f6f6;
	background: -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e2e3e5));
	background: -moz-linear-gradient(top,  #f6f6f6,  #e2e3e5);
	background: linear-gradient(top,  #f6f6f6,  #e2e3e5);
}
.wrap {
    display: table;
	float:left;
    width: 99%;
	height:100%;
	padding-bottom:8px

}
.editor .wrap{padding-bottom:25px; height:87% !important;}




.editor .wrap {
    margin-bottom:0px;

}
.wrap:after{clear:both}

.text
{
}
.source
{
	display: table-cell;
	vertical-align: top;
	padding-right: 26px !important;
}
.target
{
	display: table-cell;
	height: inherit;
	float:right !important;
	vertical-align: top;
	padding-left: 26px !important;
}

.editor .charleft{display:none}
.light{background:#f7f8f9 url(../img/freccia.png) 49% 10px  no-repeat; }
.buttons{position: relative;top:0px;}
/*
.light
	{
	background-image: url(../img/fakeborder.png);
	background-position: 132% bottom;
	background-repeat: no-repeat;
	}
*/


/*TAG*/
.b-open{background:#09beec url(../img/b-open.png) right center no-repeat;padding:3px 7px 3px 3px;height:20px;color:#fff;font-weight:bold;font-size:13px;}
.b-close{background:#09beec url(../img/b-close.png) left center no-repeat;padding:3px 3px 3px 7px;height:20px;color:#fff;font-weight:bold;font-size:13px;}


/*tab rows */
/*.overflow{overflow-y:auto;min-height:8px;margin-bottom:-1px;position:relative;z-index:9999999999999999999999999999999;}*/
.graysmall li
{
	width:45%;
	float:left;
	margin:2px 1px 10px 0;
	padding:12px 20px 12px 30px;
	text-align:left;
	color:#666;
	list-style:none;
	font-size: 14px;
	line-height:16px;
	cursor:text;
	-webkit-transition: all 100ms ease-in;
	transition: all 100ms ease-in;
}
.graysmall li.details
{
	width: 100%;
	padding: 0;
	margin: 0;
}
.graysmall div.comment
{
	float: left;
	margin-left: 30px;
	width: 60%;
	padding: 3px 0;
	border-top: 1px dotted #ccc;
	font-style: italic;
	background: transparent url(../img/icon_edit_left.png) right center no-repeat;
}
.graysmall div.comment[contenteditable=true]
{
	background: #fff;;
	border: 1px solid #999;
	padding: 3px 6px;
	margin-left: 23px;
	margin-bottom: 6px;
}
.graysmall .b{padding-left:25px!important;position:relative}
.message li{background: url(../img/bad.png) 22px center no-repeat;padding-left:40px !Important;background-size:12px 12px}
.graysmall:hover .trash{height:20px;}
.trash:hover{background: url(../img/sprite.png) -10px -1245px no-repeat;opacity:1;}


.trash{transition: width 2s; transition: width 2s; /* Firefox 4 */ -webkit-transition: width 2s; /* Safari and Chrome */ -o-transition: width 2s; /* Opera */ -webkit-transition: all 0.1s linear;
	   transition: all 0.1s linear;
	   -o-transition: all 0.1s linear;
	   -ms-transition: all 0.1s linear;display:block;height:0;width:20px;background: url(../img/sprite.png) -10px -1243px no-repeat; opacity:0.5;position:absolute;right:5px;top:14px}
.graysmall-message{bottom:-10px;left:25px;position:absolute;font-size:10px;display:none;color:#999999}



.graysmall:hover .graysmall-message{display:block;}
.graysmall-details{display:none;position:absolute;bottom:0px;color:#666;width:100%;float:left;margin:0;padding:0;	}

.glossary .graysmall .graysmall-details {
	margin-top: 0;
}

.graysmall .graysmall-details
{
	display: block;
	width: 30%;
	position: relative;
	float: right;
	margin-top: -15px;
}
.graysmall{color:#333;background:#fbfbfb;}
.graysmall-details li{float:right;width:auto !important;font-size:11px;margin:0 0px;padding:2px 5px 0px 5px;border-bottom:none;}
.graysmall:hover{background:#e9e8e9;cursor:default;}

.graysmall:hover li span{color:#000 !important}
/* ... */

